webpages/styles/components/search.css
.search-box {
  display: flex;
  align-items: center;
  user-select: none;
  box-shadow: var(--searchbox-shadow);
  padding: 20px 30px;
}
.search-box input {
  background: var(--search-input-background);
  padding: 8px 12px;
  border: none;
  border-radius: 4px 0 0 4px;
  color: var(--content-text);
  width: 150px;
  height: 16px;
  transition: none;
}
.search-box input:focus {
  width: 300px;
}
[dir="rtl"] .search-box input {
  border-radius: 0 4px 4px 0;
}
.search-box input:focus {
  outline: none;
}
.search-box input::placeholder {
  color: var(--placeholder-text);
}

.search-box > button {
  background-color: var(--search-input-background);
  background-repeat: no-repeat;
  background-position: center;
  height: 32px;
  width: 44px;
  border: none;
  border-radius: 0 4px 4px 0;
  outline: none;
  cursor: pointer;
}
[dir="rtl"] .search-box > button {
  border-radius: 4px 0 0 4px;
}

.search-button {
  background-image: url(/images/icons/search.svg);
}

.search-clear-button {
  background-image: url(/images/icons/x.svg);
}

